completed the rest

--- a/assignment-04/index.html
+++ b/assignment-04/index.html
@@ -5,12 +5,18 @@
   </head>
 
   <body>
-    <h1>Page Name</h1>
-    <p> I am a paragraph!</p>
-    <a href="./about.html">To About Page</a>
-    Page</a>
+    <h1>Nothing Gold Can Stay</h1>
+    <h2>Robert Frost</h2>
     <hr>
+    <pre> Nature's first green is gold,
+ Her hardest hue to hold.
+ Her early leaf's a flower;
+ But only so an hour.
+ Then leaf subsides to leaf,
+ So Eden sank to grief,
+ So dawn goes down to day
+ Nothing gold can stay. </pre>
+<a href="./about.html">To About Page</a>
     <br>
-    <img src="./images/screenshot.png" />
   </body>
 </html>
