--- a/assignment-06/index.html
+++ b/assignment-06/index.html
@@ -81,8 +81,11 @@ Missoula, MT 59802
           <br />
           <label>Phone:<br />
             <input type="text" name="telephone"
+             /></label>
+     </fieldset>
 
-     <br><br>
+
+     <br>
 
      Any questions for us?
      <br><br>
