--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -35,11 +35,15 @@
     <div id="art"
       class="container">
       <h1>Art</h1>
+      <img src="./images/cosmo.jpg" alt="Album cover art for Credence
+      Clearwater Revival's Cosmo's Factory" title="Cosmo's Factory Cover Art"
+      width="600" height="589" />
       </div>
 
   <div id="audio"
     class="container">
     <h1>Audio</h1>
+    <p><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/253536599&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></p>
     </div>
 
   <div id="video"
@@ -56,7 +60,9 @@
   <div id="lyrics"
     class="container lyrics">
     <h1>Lyrics</h1>
-    <p><br>Oh baby,
+    <p><br>
+I Heard it Through The Grapevine<br><br>
+Oh baby,
 I bet you're wondering, how I knew<br>
 About your plans to make me blue<br>
 With some other guy you knew before<br>
@@ -93,8 +99,21 @@ Repeat Chorus<br><br>
   <div id="copyright"
     class="container">
     <h1>Copyright</h1>
-    <p>I do not own this material. This is 
+    <p>I do not own this material. This is
     for a school assignment.</p>
+
+    <video poster="./media/mart-logo-poster.jpg" width="400"
+    height="240" preload controls>
+      <source src="./media/mart-logo-animated.mp4"
+      type="video/
+      mp4;codecs="avc1.42E01E,
+      mp4a.40.2">
+      <source src="./media/mart-
+      logo-animated.webm"
+      type="video/webm;codecs="vp8,
+      vorbis">
+    </video>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.141884603939!2d-113.98432204952831!3d46.86058014710429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc3413abc31d%3A0x5a5373da5d9ea43c!2s32%20Campus%20Dr%2C%20Missoula%2C%20MT%2059812!5e0!3m2!1sen!2sus!4v1570825849939!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </div>
 
 
