--- a/assignment-07/index.html
+++ b/assignment-07/index.html
@@ -102,17 +102,16 @@ Repeat Chorus<br><br>
     <p>I do not own this material. This is
     for a school assignment.</p>
 
-    <video poster="./media/mart-logo-poster.jpg" width="400"
-    height="240" preload controls>
-      <source src="./media/mart-logo-animated.mp4"
-      type="video/
-      mp4;codecs="avc1.42E01E,
-      mp4a.40.2">
-      <source src="./media/mart-
-      logo-animated.webm"
-      type="video/webm;codecs="vp8,
-      vorbis">
-    </video>
+    <video poster="./media/mart-logo-poster.jpg" width="400" height="240" preload controls loop>
+  <source src="./media/mart-logo-animated.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
+  <source src="./media/mart-logo-animated.webm" type='video/webm;codecs="vp8, vorbis"'>
+  <p>A video of a puppy playing in the snow.</p>
+  <p>Sorry, your browser does not support the video tag.</p>
+</video>
+
+
+
+
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.141884603939!2d-113.98432204952831!3d46.86058014710429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc3413abc31d%3A0x5a5373da5d9ea43c!2s32%20Campus%20Dr%2C%20Missoula%2C%20MT%2059812!5e0!3m2!1sen!2sus!4v1570825849939!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </div>
 
