--- a/assignment-08/index.html
+++ b/assignment-08/index.html
@@ -64,7 +64,7 @@
       <a href="./about.html">About</a>
       <a href="./contact.html">Contact</a>
     </nav>
-    <br><br>
+    <br>
 
     <div id="main">
       <h1>How to Cast a Fly Fishing Rod</h1>
@@ -80,7 +80,7 @@
     <p>Fly fishing is one of most popular, yet challenging mediums
     to catch trout in your local lake or stream. Mastering the proper
     technique to cast a fly with a fly rod will take some time, but with
-    these easy steps you'll be on the water in no time.</p>
+    these easy steps you'll be on the water catching trout in no time.</p>
     </div>
 <br>
     <div id="materials"
