--- a/assignment - 11/index.html
+++ b/assignment - 11/index.html
@@ -56,7 +56,7 @@
 
       <div class="banner">
 
-        <img src="./images/bigpine.jpg" title="Large Image" id=""/>
+        <img src="./images/bigpine.png" title="Large Image" id=""/>
 
       </div>
 
