--- a/assignment -12/about.html
+++ b/assignment -12/about.html
@@ -5,4 +5,60 @@
     <meta name="description" content="Rambler Co. Home Page">
     <meta name="author" content="Kyle Kredo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+       <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Rambler Co. About</title>
+</head>
+
+<body>
+  <header class="">
+     <div class="menu-item">
+        <a href="./home.html">Home</a>
+     </div>
+     <div class="menu-item">
+        <a href="./about.html">About</a>
+     </div>
+     <div class="menu-item">
+        <a href="./contact.html">Contact</a>
+     </div>
+     <div class="menu-item dropdown">
+        <a href="#">inspo</a>
+        <div class="dropdown-content">
+           <div class="dropdown-item">
+           <a href="https://www.seagerco.com/">Seager Co.</a>
+
+           </div>
+           <div class="dropdown-item">
+              <a href="https://roark.com/">Roark</a>
+           </div>
+           <div class="dropdown-item">
+              <a href="https://melouclothing.com/">melou</a>
+           </div>
+        </div>
+     </div>
+     <div class="site-name">
+        Rambler Company
+     </div>
+  </header>
+  <main class="main-container">
+    <div id="art"
+      class="photo">
+      <img src="./images/owens.png" alt="Cool photo that is not mine" title="Owens River, Robson Hatsukami Morgan"
+       />
+      </div>
+     <div class="site-brand">
+        <p>Our Story</p>
+     </div>
+     <div class="words">
+     <p>Officia velit ad deserunt ex qui anim amet ea fugiat adipisicing officia. Sunt anim elit ut amet enim dolore id consequat eu. Est in officia velit cillum ex mollit incididunt nostrud.</p>
+     <p>Duis irure laborum ut minim elit duis laboris magna. Nostrud nulla do sit ex commodo duis deserunt ad voluptate eiusmod ullamco nisi deserunt. Pariatur labore dolor cupidatat ullamco anim Lorem adipisicing officia amet ut.</p>
+     <p>Reprehenderit sit et in reprehenderit in enim anim enim magna aliquip. Velit sit commodo exercitation irure nisi enim consequat deserunt ea veniam dolore officia. Laborum aliquip qui ullamco nisi ut labore tempor amet deserunt veniam consectetur sint proident.</p>
+     <p>Kyle Kredo</p>
+     <p>Founder // Creative Director </p>
+   </div>
+  </main>
+  <img src="./images/facebook.svg"title="Find us on Facebook!"/>
+  <img src="./images/instagram.svg"title="Follow us on Instagram"/>
+  <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+</body>
+</html>
