--- a/assignment -12/contact.html
+++ b/assignment -12/contact.html
@@ -5,4 +5,71 @@
     <meta name="description" content="Rambler Co. Home Page">
     <meta name="author" content="Kyle Kredo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Rambler Co. Contact</title>
+  </head>
+
+  <body>
+    <header class="">
+       <div class="menu-item">
+          <a href="./home.html">Home</a>
+       </div>
+       <div class="menu-item">
+          <a href="./about.html">About</a>
+       </div>
+       <div class="menu-item">
+          <a href="./contact.html">Contact</a>
+       </div>
+       <div class="menu-item dropdown">
+          <a href="#">inspo</a>
+          <div class="dropdown-content">
+             <div class="dropdown-item">
+             <a href="https://www.seagerco.com/">Seager Co.</a>
+
+             </div>
+             <div class="dropdown-item">
+                <a href="https://roark.com/">Roark</a>
+             </div>
+             <div class="dropdown-item">
+                <a href="https://melouclothing.com/">melou</a>
+             </div>
+          </div>
+       </div>
+       <div class="site-name">
+          Rambler Company
+       </div>
+    </header>
+    <main class="main-container">
+      <div id="art"
+        class="photo">
+        <img src="./images/horse.png" alt="Cool photo that is not mine" title="Photo by Priscila Du Perez"
+         />
+        </div>
+        <div class="site-brand">
+           <p>Contact Us</p>
+        </div>
+        <div id="form"
+        class="container">
+          <fieldset>
+
+            <label>Name:<br />
+              <input type="text" name="name"
+                /></label>
+               <br />
+            <label>Email:<br />
+              <input type="text" name="email"
+                  /></label>
+                  <br />
+                  <label>Phone:<br />
+                    <input type="text" name="telephone"
+                        /></label>
+          </fieldset>
+
+     </main>
+     <br>
+     <img src="./images/facebook.svg"title="Find us on Facebook!"/>
+     <img src="./images/instagram.svg"title="Follow us on Instagram"/>
+     <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+   </body>
+   </html>
