--- a/assignment -12/gallery.html
+++ b/assignment -12/gallery.html
@@ -5,4 +5,65 @@
     <meta name="description" content="Rambler Co. Home Page">
     <meta name="author" content="Kyle Kredo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Rambler Co. Gallery</title>
+  </head>
+
+  <body>
+    <header class="">
+       <div class="menu-item">
+          <a href="./home.html">Home</a>
+       </div>
+       <div class="menu-item">
+          <a href="./about.html">About</a>
+       </div>
+       <div class="menu-item">
+          <a href="./contact.html">Contact</a>
+       </div>
+       <div class="menu-item">
+         <a href="./gallery.html">Gallery</a>
+       </div>
+       <div class="menu-item dropdown">
+          <a href="#">inspo</a>
+          <div class="dropdown-content">
+             <div class="dropdown-item">
+             <a href="https://www.seagerco.com/">Seager Co.</a>
+
+             </div>
+             <div class="dropdown-item">
+                <a href="https://roark.com/">Roark</a>
+             </div>
+             <div class="dropdown-item">
+                <a href="https://melouclothing.com/">melou</a>
+             </div>
+          </div>
+       </div>
+       <div class="site-name">
+          Rambler Company
+       </div>
+    </header>
+    <main class="main-container">
+      <div id="art"
+        class="photo">
+        <img src="./images/truckee.png" alt="Cool photo that is mine" title="Truckee train tunnels feat. Matt and Ricky"
+         />
+        </div>
+        <div id="art"
+          class="photo">
+          <img src="./images/bridge.png" alt="Cool photo that is mine" title="Jerry Johnson Hot Springs"
+           />
+          </div>
+          <div id="art"
+            class="photo">
+            <img src="./images/truck.png" alt="Cool photo that is mine" title="Papa Tom's Truck"
+             />
+            </div>
+          
+
+    </main>
+    <img src="./images/facebook.svg"title="Find us on Facebook!"/>
+    <img src="./images/instagram.svg"title="Follow us on Instagram"/>
+    <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+  </body>
+  </html>
