--- a/assignment -12/contact.html
+++ b/assignment -12/contact.html
@@ -12,15 +12,18 @@
 
   <body>
     <header class="">
-       <div class="menu-item">
-          <a href="./home.html">Home</a>
-       </div>
-       <div class="menu-item">
-          <a href="./about.html">About</a>
-       </div>
-       <div class="menu-item">
-          <a href="./contact.html">Contact</a>
-       </div>
+      <div class="menu-item">
+         <a href="./home.html">Home</a>
+      </div>
+      <div class="menu-item">
+         <a href="./about.html">About</a>
+      </div>
+      <div class="menu-item">
+         <a href="./contact.html">Contact</a>
+      </div>
+      <div class="menu-item">
+        <a href="./gallery.html">Gallery</a>
+      </div>
        <div class="menu-item dropdown">
           <a href="#">inspo</a>
           <div class="dropdown-content">
