--- a/assignment-13/about.html
+++ b/assignment-13/about.html
@@ -57,8 +57,8 @@
      <p>Growing up in Southern California has allowed me to pull on angry calicos on the wall or throw irons at schooling yellowtail and everything in between. My passion for fishing is fueled by breakwall excursions with my dad on our aluminum rowboat in which we bob around the surf hucking plastics at boiler rocks in search of "The One." </p>
      <p> Hence, Calico Bass are my favorite subject to illustrate, but the trout species have been growing on me. I am currently in my junior year at the University of Montana studying Media Arts. </p>
      <p>Having the luxury of rising cutthroats in essentially my backyard has brought a new perspective to my artistic outlook, as well as pusruing art and graphic design as profession. Although pen and paper is my preferred medium, graphic design has become an excitng yet challenging medium in which I can express my passions. </p>
-     <p>Whenever I am on the water, whether it is slow rolling a swimbait for calico, pitching grass for largemouth, presenting a fly to rising trout, or flipping spinners in a creek, I am in constant wonder of what is happening beneath the surface. I am enthralled by the few seconds that occur before we the fishermen are connected to the fish via line and lure and</p>
-    <p>and what that moment looks like. I aspire to recreate those moments in my art and produce a fresh and contemporary representation of these fish that we are so passionate about.</p>
+     <p>Whenever I am on the water, whether it is slow rolling a swimbait for calico, pitching grass for largemouth, presenting a fly to rising trout, or flipping spinners in a creek, I am in constant wonder of what is happening beneath the surface. I am enthralled by the few seconds that occur before we the fishermen are connected to the fish via line and lure and what that moment looks like. I aspire to recreate those moments in my art and produce a fresh and contemporary representation of these fish that we are so passionate about.</p>
+    
      <p>Kyle Kredo</p>
 
    </div>
