--- a/assignment -12/about.html
+++ b/assignment -12/about.html
@@ -13,7 +13,7 @@
 <body>
   <header class="">
     <div class="menu-item">
-       <a href="./home.html">Home</a>
+       <a href="./index.html">Home</a>
     </div>
     <div class="menu-item">
        <a href="./about.html">About</a>
@@ -25,7 +25,7 @@
       <a href="./gallery.html">Gallery</a>
     </div>
      <div class="menu-item dropdown">
-        <a href="#">inspo</a>
+        <a href="#">Inspo</a>
         <div class="dropdown-content">
            <div class="dropdown-item">
            <a href="https://www.seagerco.com/">Seager Co.</a>
@@ -53,9 +53,12 @@
         <p>Our Story</p>
      </div>
      <div class="words">
-     <p>Officia velit ad deserunt ex qui anim amet ea fugiat adipisicing officia. Sunt anim elit ut amet enim dolore id consequat eu. Est in officia velit cillum ex mollit incididunt nostrud.</p>
-     <p>Duis irure laborum ut minim elit duis laboris magna. Nostrud nulla do sit ex commodo duis deserunt ad voluptate eiusmod ullamco nisi deserunt. Pariatur labore dolor cupidatat ullamco anim Lorem adipisicing officia amet ut.</p>
-     <p>Reprehenderit sit et in reprehenderit in enim anim enim magna aliquip. Velit sit commodo exercitation irure nisi enim consequat deserunt ea veniam dolore officia. Laborum aliquip qui ullamco nisi ut labore tempor amet deserunt veniam consectetur sint proident.</p>
+     <p>Rambler Company is the coalition of like-minded individuals who crave the unknown and seek to be lost. We aim to create the highest quality of goods for those who share this attitude of raw ruggedness.</p>
+     <p>Passionate about the outdoors our designs and products are reflective of our experiences on the water, in the woods, and on the mountain. From beaches to peaks we are constantly in search of </p>
+     <p>excellent times and inspiration.</p>
+     <br>
+     <p>Join the crew and ramble on.</p>
+     <br>
      <p>Kyle Kredo</p>
      <p>Founder // Creative Director </p>
    </div>
