--- a/assignment -12/gallery.html
+++ b/assignment -12/gallery.html
@@ -13,7 +13,7 @@
   <body>
     <header class="">
        <div class="menu-item">
-          <a href="./home.html">Home</a>
+          <a href="./index.html">Home</a>
        </div>
        <div class="menu-item">
           <a href="./about.html">About</a>
@@ -51,7 +51,7 @@
         </div>
         <div id="art"
           class="photo">
-          <img src="./images/bridge.png" alt="Cool photo that is mine" title="Jerry Johnson Hot Springs"
+          <img src="./images/.png" alt="Cool photo that is mine" title="Jerry Johnson Hot Springs"
            />
           </div>
           <div id="art"
@@ -59,7 +59,7 @@
             <img src="./images/truck.png" alt="Cool photo that is mine" title="Papa Tom's Truck"
              />
             </div>
-          
+
 
     </main>
     <img src="./images/facebook.svg"title="Find us on Facebook!"/>
