--- a/assignment -12/contact.html
+++ b/assignment -12/contact.html
@@ -13,7 +13,7 @@
   <body>
     <header class="">
       <div class="menu-item">
-         <a href="./home.html">Home</a>
+         <a href="./index.html">Home</a>
       </div>
       <div class="menu-item">
          <a href="./about.html">About</a>
@@ -50,21 +50,22 @@
          />
         </div>
         <div class="site-brand">
-           <p>Contact Us</p>
+           <p>Be the first to know</p>
         </div>
         <div id="form"
         class="container">
           <fieldset>
 
-            <label>Name:<br />
+            <label>Name:<br /> <br>
               <input type="text" name="name"
                 /></label>
-               <br />
-            <label>Email:<br />
+               <br /> <br>
+
+            <label>Email:<br /> <br>
               <input type="text" name="email"
                   /></label>
-                  <br />
-                  <label>Phone:<br />
+                  <br /> <br>
+                  <label>Phone:<br /> <br>
                     <input type="text" name="telephone"
                         /></label>
           </fieldset>
