--- a/assignment-final/shop.html
+++ b/assignment-final/shop.html
@@ -5,12 +5,13 @@
     <meta name="description" content="Rambler Co. Home Page">
     <meta name="author" content="Kyle Kredo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
      <link rel="stylesheet" type="text/css" href="./css/font.css">
        <link rel="stylesheet" type="text/css" href="./css/style.css">
 
     <title>RAMBLER CO. / SHOP</title>
 </head>
-
+<div class="html">
 <body>
   <header class="">
     <div class="menu-item">
@@ -121,5 +122,6 @@
 <img src="./images/ramblerlogo.png" style="float: right; margin-right: 520px; margin-bottom: 10px; margin-top:-30px;">
 </a>
 <br><br>
+</div>
 </body>
 </html>
