--- a/assignment-final/about.html
+++ b/assignment-final/about.html
@@ -34,32 +34,39 @@
   <main class="main-container">
     <div id="art"
       class="photo">
-      <img src="./images/owens.png" alt="Cool photo that is not mine" title="Owens River, Robson Hatsukami Morgan"
+      <img src="./images/owens.png" style="width:100%" alt="Cool photo that is not mine" title="Owens River, Robson Hatsukami Morgan"
        />
       </div>
      <div class="site-brand">
-        <p style="color:#F79420;">OUR STORY</p>
+        <p style="color:#F79420; font-size:1.5vw;">OUR STORY</p>
      </div>
 
 
      <div class="words">
-     <p>Rambler Company is the coalition of like-minded individuals who crave the unknown and seek to be lost. We aim to create the highest quality of goods for those who share this attitude of raw ruggedness.</p>
-     <p>Passionate about the outdoors our designs and products are reflective of our experiences on the water, in the woods, and on the mountain. From beaches to peaks we are constantly in search of </p>
-     <p>excellent times and inspiration.</p>
+     <p style="font-size:1.25vw;">Rambler Company is the coalition of like-minded individuals who crave the unknown and seek to be lost. </p>
+
+     <p style="font-size:1.25vw;">We aim to create the highest quality of goods for those who share this attitude of raw ruggedness. </p>
+
+     <p style="font-size:1.25vw;">Passionate about the outdoors our designs and products are reflective of our experiences on the water, </p>
+
+     <p style="font-size: 1.25vw;">in the woods, and on the mountain. From beaches to peaks we are constantly in search of </p>
+
+     <p style="font-size: 1.25vw;">excellent times and inspiration.</p>
+
+     <p style="font-size:1.25vw;">Join the crew and Ramble on.</p>
      <br>
-     <p>Join the crew and Ramble on.</p>
-     <br>
-     <p style="color:#F79420;">Kyle Kredo</p>
-     <p>Founder // Creative Director </p>
+     <p style="color:#F79420; font-size:1.75vw;">Kyle Kredo</p>
+     <p style="font-size:1.5vw;">Founder // Creative Director </p>
    </div>
   </main>
     <a href="./index.html">
-   <img src="./images/ramblerlogo.png" style="float: right; margin-right: 80px; margin-bottom: -10px; margin-top:-200px;">
+   <img src="./images/ramblerlogo.png" style= "width:30%; float: right; margin-right: 50px; margin-bottom: -10px; margin-top: -220px;"/>
  </a>
   <img src="./images/facebook.svg"title="Find us on Facebook!"/>
   <a href="https://www.instagram.com/k_kredoart/">
   <img src="./images/instagram.svg"title="Follow us on Instagram"/>
 </a>
   <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+  <br><br>
 </body>
 </html>
