--- a/assignment-final/gallery.html
+++ b/assignment-final/gallery.html
@@ -34,28 +34,28 @@
     <main class="main-container">
       <div id="art"
         class="photo">
-        <img src="./images/truck.png" alt="Cool photo that is mine" title="Papa Tom's truck, the 69.5"
+        <img src="./images/truck.png" style="width:100%" alt="Cool photo that is mine" title="Papa Tom's truck, the 69.5"
          />
         </div>
         <div id="art"
           class="photo">
-          <img src="./images/photos2.png" alt="Cool photo that is mine" title="Photo from Seager Co."
+          <img src="./images/photos2.png" style="width:100%" alt="Cool photo that is mine" title="Photo from Seager Co."
            />
           </div>
           <div id="art"
             class="photo">
-            <img src="./images/photos4.png" alt="Cool photo that is mine" title="Photo is not mine"
+            <img src="./images/photos4.png" style="width:100%" alt="Cool photo that is mine" title="Photo is not mine"
              />
             </div>
 
             <div id="art"
               class="photo">
               <a href="./index.html">
-              <img src="./images/bridge.png" alt="Cool photo that is mine" title="Jerry Johnson"/>
+              <img src="./images/bridge.png" style="width:100%" alt="Cool photo that is mine" title="Jerry Johnson"/>
             </a>
               </div>
               <a href="./index.html">
-              <img src="./images/ramblerlogo2.png"style="float: right; margin-right: 270px; margin-bottom: -10px; margin-top:-50px;"/>
+              <img src="./images/ramblerlogosite.png"style= "width:100%;"/>
             </a>
               <iframe width="500" height="315" src="https://www.youtube.com/embed/It7107ELQvY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <iframe width="500" height="315" src="https://www.youtube.com/embed/wCCfc2vAuDU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -70,5 +70,6 @@
     <img src="./images/instagram.svg"title="Follow us on Instagram"/>
   </a>
     <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+    <br><br>
   </body>
   </html>
