--- a/assignment-final/index.html
+++ b/assignment-final/index.html
@@ -85,29 +85,29 @@
        <div id="art"
          class="photo">
         <a href="./shop.html">
-         <img src="./images/horseindex.png" alt="Cool photo that is not mine, Seager Co." title="Cool photo that is not mine"/>
+         <img src="./images/horseindex.png" style=width:100% title="Cool photo that is not mine"/>
 
          </div>
 
          <div id="art"
            class="photo">
           <a href="./gallery.html">
-           <img src="./images/landscape.jpg" alt="Cool photo that is not mine, Seager Co." title="Cool photo that is not mine"/>
+           <img src="./images/landscape.jpg" style=width:100% alt="Cool photo that is not mine, Seager Co." title="Cool photo that is not mine"/>
          </a>
            </div>
       <div class="site-brand">
-         <p style="color:#F79420;"> LIVE FAST, DIE YOUNG</p>
+         <p style="color:#F79420;font-size:2.5vw;"> LIVE FAST, DIE YOUNG</p>
       </div>
 
 
     <div class="site-brand">
-      <p style="color:#F79420;">
+      <p style="color:#F79420; font-size:2.5vw;">
       JOIN THE CREW
      </p>
 
     </div>
     <div class="words">
-      <p>Be the first to learn about new releases, sales, and upcoming events.</p>
+      <p style= " font-size:1.75vw;">Be the first to learn about new releases, sales, and upcoming events.</p>
     <div id="form"
 
       <fieldset>
@@ -123,7 +123,7 @@
    </main>
    <br>
    <a href="./index.html">
-   <img src="./images/ramblerlogo.png" style="float: right; margin-right: 80px; margin-bottom: -10px; margin-top:-250px;">
+   <img src="./images/ramblerlogo.png" style= "width:30%; float: right; margin-right: 50px; margin-bottom: -10px; margin-top: -220px;"/>
    </a>
    <br>
    <img src="./images/facebook.svg"title="Find us on Facebook!"/>
@@ -131,6 +131,7 @@
    <img src="./images/instagram.svg"title="Follow us on Instagram"/>
  </a>
    <img src="images/vimeo.svg"title="Watch us on Vimeo"/>
+   <br><br>
    <script src="scripts/main.js"></script>
 </body>
 </html>
