--- a/assignment-final/shop.html
+++ b/assignment-final/shop.html
@@ -68,28 +68,28 @@
 
 <script src="scripts/main.js"></script>
 
-
+<br><br><br><br><br><br><br>
 
 
 
 <div class="row">
   <div class="column">
     <div class="card">
-        	<img src="./images/shirt1.png" alt="Card Back">
-            <img src="./images/blackfront.png" class="img-top" alt="Card Front">
+        	<img src="./images/shirt1.png" style= width:80%; alt="Card Back">
+            <img src="./images/blackfront.png" style=width:80%; class="img-top" alt="Card Front">
         </div>
   </div>
 
   <div class="column">
     <div class="card">
-        	<img src="./images/shirt2.png" alt="Card Back">
-            <img src="./images/creamfront.png" class="img-top" alt="Card Front">
+        	<img src="./images/shirt2.png" style=width:80% alt="Card Back">
+            <img src="./images/creamfront.png" style=width:80% class="img-top" alt="Card Front">
         </div>
   </div>
   <div class="column">
     <div class="card">
-        	<img src="./images/shirt3.png" alt="Card Back">
-            <img src="./images/olivefront.png" class="img-top" alt="Card Front">
+        	<img src="./images/shirt3.png" style=width:80% alt="Card Back">
+            <img src="./images/olivefront.png" style=width:80% class="img-top" alt="Card Front">
         </div>
   </div>
 </div>
@@ -119,7 +119,7 @@
 </div>
 
 <a href="./shop.html">
-<img src="./images/ramblerlogo.png" style="float: right; margin-right: 520px; margin-bottom: 10px; margin-top:-30px;">
+<img src="./images/ramblerlogosite.png" style= "width:100%;"/>
 </a>
 <br><br>
 </div>
