--- a/assignment-final/gallery.html
+++ b/assignment-final/gallery.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/fonts.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>RAMBLER CO. / PHOTOS</title>
+    <title>RAMBLER CO. / LOOK</title>
   </head>
 
   <body>
