--- a/assignment-final/index.html
+++ b/assignment-final/index.html
@@ -38,25 +38,25 @@
 
  <div class="mySlides fade">
    <div class="numbertext">1 / 5</div>
-   <img src="./images/slide1.jpg" style="width:100%">
+   <img src="./images/slide1.jpg" title="Ben Christensen Photo" style="width:100%">
    <div class="text">Outcast</div>
  </div>
 
  <div class="mySlides fade">
    <div class="numbertext">2 / 5</div>
-   <img src="./images/slide2.jpg" style="width:100%">
+   <img src="./images/slide2.jpg" title="Seager Co. Photo" style="width:100%">
    <div class="text">Loyal Partners</div>
  </div>
 
  <div class="mySlides fade">
    <div class="numbertext">3 / 5</div>
-   <img src="./images/slide3.jpg" style="width:100%">
+   <img src="./images/slide3.jpg"  style="width:100%">
    <div class="text">Foam is Home</div>
  </div>
 
  <div class="mySlides fade">
    <div class="numbertext">4 / 5</div>
-   <img src="./images/slide4.jpg" style="width:100%">
+   <img src="./images/slide4.jpg" title="Seager Co. Photo" style="width:100%">
    <div class="text">Ol' Son</div>
  </div>
 
@@ -85,14 +85,14 @@
        <div id="art"
          class="photo">
         <a href="./shop.html">
-         <img src="./images/horseindex.png" style=width:100% title="Cool photo that is not mine"/>
+         <img src="./images/horseindex.png" style=width:100% title="Ben Christensen Photo"/>
 
          </div>
 
          <div id="art"
            class="photo">
           <a href="./gallery.html">
-           <img src="./images/landscape.jpg" style=width:100% alt="Cool photo that is not mine, Seager Co." title="Cool photo that is not mine"/>
+           <img src="./images/landscape.jpg" style=width:100% alt="Cool photo that is not mine, Seager Co." title="Ben Christensen Photo"/>
          </a>
            </div>
       <div class="site-brand">
